--- a/index.html
+++ b/index.html
@@ -3,42 +3,85 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui" />
-  <title>Daily Dice</title>
-  <script type="module" src="/src/main.js"></script>
+  <title>Phrase Game Daily</title>
+  <script type="module" src="/src/scripts/main.js"></script>
 </head>
 <body>
 
   <header>
     <div id="helpBtn"></div>
-    <h1>🎲 Daily Dice</h1>
+    <h1>Phrase Game Daily</h1>
     <div id="statsBtn"></div>
     <div id="settingsBtn"></div>
   </header>
 
-  <div class="screen" id="playingScreen">
-    <p>Test your luck with three dice. How high can you roll?</p>
-    <button id="rollBtn">🎲🎲🎲 Roll 'em!</button>
+  <div class="screen" id="resultScreen">
+    <h1 id="resultLine1">Today's phrase was ...</h1>
+    <h1 id="resultLinePhrase">PHRASE</h1>
+    <h1 id="resultLine2">RESULT</h1>
+    <h2 id="resultLine3">SCORE</h2>
+    <button id="shareBtn">🗨️ Share</button>
+    <p><span id="timeLeft">12h 34m 56s</span> until next word.</p>
   </div>
 
-  <div class="screen" id="resultScreen">
-    <p>Your dice rolls today were...</p>
-    <h1 id="resultLine1">⚅ + ⚅ + ⚅ = 18 points</h1>
-    <h2 id="resultLine2">Lucky!</h2>
-    <button id="shareBtn">🗨️ Share</button>
-    <p><span id="timeLeft"></span></p>
-    <br>
+  <div class="screen" id="playingScreen">
+    <div class="game-header">
+      <h3 id="bonus-timer">BONUS</h3>
+      <h3>Lives: <span id="lives">8</span></h3>
+    </div>
+
+    <h2 id="answer"></h2>
+
+    <div class="grid"></div>
+
+    <h2 id="category">Try to guess today's phrase</h2>
+
+    <div class="keyboard">
+      <div>
+        <div>Q</div>
+        <div>W</div>
+        <div>E</div>
+        <div>R</div>
+        <div>T</div>
+        <div>Y</div>
+        <div>U</div>
+        <div>I</div>
+        <div>O</div>
+        <div>P</div>
+      </div>
+      <div>
+        <div>A</div>
+        <div>S</div>
+        <div>D</div>
+        <div>F</div>
+        <div>G</div>
+        <div>H</div>
+        <div>J</div>
+        <div>K</div>
+        <div>L</div>
+      </div>
+      <div>
+        <div>Z</div>
+        <div>X</div>
+        <div>C</div>
+        <div>V</div>
+        <div>B</div>
+        <div>N</div>
+        <div>M</div>
+      </div>
+    </div>
   </div>
 
   <div class="screen" id="helpScreen">
-    <h2>Welcome to Daily Dice!</h2>
-    <p>This is an example of how to use the Playpass SDK to build a simple daily level game.</p>
-    <p>Each day, you have the opportunity to roll a set of 3 dice. If you get a good roll, share it with a friend!</p>
+    <h2>Welcome to Phrase Game!</h2>
+    <p>This is an example of how to use the Playpass SDK to build a simple daily level phrase game.</p>
+    <p>Each day, there's a different phrase to guess. You have 8 tries to get it right!</p>
     <button id="helpBackBtn">Continue</button>
   </div>
 
   <div class="screen" id="statsScreen">
     <h2>Stats</h2>
-    <p>You have rolled 999 points over 123 days.</p>
+    <p id="winStats"></p>
     <button id="statsBackBtn">Back</button>
   </div>
 
@@ -53,10 +96,6 @@
       <button id="logoutBtn">Logout</button>
     </div>
     <button id="settingsBackBtn">Back</button>
-  </div>
-
-  <div class="branding">
-    <a href="https://github.com/playpassgames/playpass-game-template" target="_blank">Fork this Playpass template</a>
   </div>
 
 </body>
