--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h1 id="resultLine2">RESULT</h1>
       <h2 id="resultLine3">SCORE</h2>
       <button name="share">🗨️ Share</button>
-      <p><span id="timeLeft">12h 34m 56s</span> until next word.</p>
+      <p><span id="timeLeft">12h 34m 56s</span> until next phrase.</p>
     </div>
 
     <div slot="screen" id="game-screen">
