--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 
     <div slot="screen" id="settings-screen">
       <h2>Settings</h2>
+      <address>
+        Built by <a href="https://playpass.games">Playpass Games</a>
+      </address>
       <div class="showIfLoggedOut">
         <div>Login to save or transfer your game progress.</div>
         <button name="login">📱 Login</button>
