Add made with playpass banner

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
       <p>This is an example of how to use the Playpass SDK to build a simple daily level phrase game.</p>
       <p>Each day, there's a different phrase to guess. You have 8 tries to get it right!</p>
       <button name="back">Continue</button>
+
+      <a class="fork-ribbon" href="https://playpass.games/" target="_blank">Made with Playpass</a>
     </div>
 
     <div slot="screen" id="stats-screen">
